--- a/debian/control
+++ b/debian/control
@@ -4,7 +4,7 @@ Uploaders: Sebastian Nickel <sebastian.nickel@nine.ch>, Roman Plessl <roman.ples
 Section: misc
 Priority: optional
 Standards-Version: 3.9.5
-Build-Depends: debhelper (>= 8), python-support | dh-python
+Build-Depends: debhelper (>= 8), dh-python | python-support
 
 Package: nagios-plugins-ceph
 Architecture: all
